<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>cv_bridge</name>
  <version>1.12.4</version>
  <description>
    This contains CvBridge, which converts between ROS
    Image messages and OpenCV images.
  </description>
  <author>Patrick Mihelich</author>
  <author>James Bowman</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/cv_bridge</url>
  <url type="repository">https://github.com/ros-perception/vision_opencv</url>
  <url type="bugtracker">https://github.com/ros-perception/vision_opencv/issues</url>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
  </export>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>opencv3</build_depend>
  <build_depend>python</build_depend>
  <build_depend>ros2_console</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sensor_msgs_util</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>opencv3</exec_depend>
  <exec_depend>python</exec_depend>
  <exec_depend>ros2_console</exec_depend>
  <exec_depend>sensor_msgs_util</exec_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <test_depend>rostest</test_depend>
  <test_depend>python-numpy</test_depend>

  <doc_depend>dvipng</doc_depend>
</package>
