<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>image_geometry</name>
  <version>1.12.4</version>
  <description>
    `image_geometry` contains C++ and Python libraries for interpreting images
    geometrically. It interfaces the calibration parameters in sensor_msgs/CameraInfo
    messages with OpenCV functions such as image rectification, much as cv_bridge
    interfaces ROS sensor_msgs/Image with OpenCV data types.
  </description>
  <author>Patrick Mihelich</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <url>http://www.ros.org/wiki/image_geometry</url>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
  </export>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>opencv3</build_depend>
  <build_depend>ros2_time</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sensor_msgs_util</build_depend>

  <exec_depend>opencv3</exec_depend>
  <exec_depend>ros2_time</exec_depend>
  <exec_depend>sensor_msgs_util</exec_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <doc_depend>dvipng</doc_depend>
  <doc_depend>texlive-latex-extra</doc_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
