<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>opencv_tests</name>
  <version>1.12.4</version>
  <description>
    Tests the enumerants of the ROS Image message, and functionally tests the Python and C++ implementations of CvBridge.
  </description>
  <author>James Bowman</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <url>http://wiki.ros.org/opencv_tests</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
