<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>vision_opencv</name>
  <version>1.12.4</version>
  <description>Packages for interfacing ROS with OpenCV, a library of programming functions for real time computer vision.</description>
  <author>Patrick Mihelich</author>
  <author>James Bowman</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  
  <url type="website">http://www.ros.org/wiki/vision_opencv</url>
  <url type="bugtracker">https://github.com/ros-perception/vision_opencv/issues</url>
  <url type="repository">https://github.com/ros-perception/vision_opencv</url>

  <buildtool_depend>ament</buildtool_depend>
  
  <!-- <exec_depend>cv_bridge</exec_depend> -->
  <exec_depend>image_geometry</exec_depend>
  <export>
    <metapackage />
    <build_type>ament_cmake</build_type>
  </export>

</package>
